added navigation tags and edited a little

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
     <a href="/">Home</a>
     <a href="/Bio/">My Personal Bio</a>
-    <a href="https://www.youtube.com/?gl=CO&hl=es-419">Test</a>
+    <a href="https://www.youtube.com/?gl=CO&hl=es-419">Bored? Click Me!</a>
     </nav>
     
     
